k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talentlink-ingress
  namespace: talentlink-local
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: talentlink.local
      http:
        paths:

          # ---------- BACKEND SERVICES ----------
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000

          - path: /api/users/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5000

          - path: /api/jobs/
            pathType: Prefix
            backend:
              service:
                name: job-service
                port:
                  number: 5000

          - path: /api/cv/
            pathType: Prefix
            backend:
              service:
                name: cv-service
                port:
                  number: 5000

          - path: /api/matching/
            pathType: Prefix
            backend:
              service:
                name: matching-service
                port:
                  number: 5000

          - path: /api/notifications/
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 5000

          # -------- FRONTEND --------
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
